@@ -1,4 +1,8 @@
+import org.gradle.api.attributes.Bundling
+
 plugins {
+    base
+
     // this is necessary to avoid the plugins to be loaded multiple times
     // in each subproject's classloader
     alias(libs.plugins.android.application) apply false
@@ -8,4 +12,54 @@ plugins {
     alias(libs.plugins.kotlin.serialization) apply false
     alias(libs.plugins.ksp) apply false
     alias(libs.plugins.room) apply false
+}
+
+val ktlint: Configuration by configurations.creating
+
+dependencies {
+    ktlint(libs.ktlint.cli) {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
+}
+
+val ktlintArgs = listOf(
+    "**/src/**/*.kt",
+    "**/*.gradle.kts",
+    "!**/build/**",
+    "!**/.gradle/**",
+)
+
+tasks.register<JavaExec>("ktlintCheck") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    args(ktlintArgs)
+}
+
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    args("-F")
+    args(ktlintArgs)
+}
+
+tasks.named("check") {
+    dependsOn("ktlintCheck")
+}
+
+subprojects {
+    tasks.matching { task ->
+        task.name == "preBuild" || task.name == "androidPreBuild"
+    }.configureEach {
+        dependsOn(rootProject.tasks.named("ktlintCheck"))
+    }
 }
